# arya-hi-transcription

./: .gitignore  README.md  env.example  example_usage.py  install_pyannote.py  integration_guide.py  pyproject.toml  test_diarization_fix.py  test_matrix_fix.py  test_notification.py  test_speaker_mapping.py
DOCS/: COMMANDS.md
app/: main.py  schemas.py
app/core/: config.py  error_handler.py  lazy_model_registry.py  model_registry.py  warnings_config.py
app/pipeline/: config.py  correct_and_infer.py  diarization.py  embedding_extraction.py  ffmpeg_utils.py  notification.py  pipeline.py  replicate_transcription.py  replicate_whisper_transcription.py  rule_based_name_extraction.py  transcription.py  utils.py
app/services/: audio_processor_impl.py  diarizer_impl.py  enricher_impl.py  transcript_service.py
app/utils/: __init__.py  path_utils.py  utils.py
transcript_monitoring/: README.md  __init__.py  background_sender.py  config.py  decorators.py  exceptions.py  metrics_collector.py  models.py  vertex_client.py
