[project]
name = "transcript-api"
version = "0.1.0"
description = "Video to transcript service"
authors = [{ name = "Secil Sen" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "openai>=1.98.0,<2.0.0",
    "pandas>=2.3.1,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "numpy<2.0",                      # Parantezler kaldırıldı
    "scipy",
    "librosa",
    "pydub>=0.25.1,<0.26.0",           # Parantezler kaldırıldı
    "json5 (>=0.12.0,<0.13.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
